# Course-Adivsor

./: .gitignore  README.md  main.py  pyproject.toml
args/: infer_args.py  vector_args.py
data/raw/: course_schedule.json  test.txt
models/: mistral_loader.py
scripts/: conversation_script.py  preprocess_catalog.py  preprocess_course_schedule.py  rag_infer.py
scripts/vectorstore/catalog_chroma_db/: chroma.sqlite3
scripts/vectorstore/course_schedule/5ab5f4be-7489-443f-92e4-b12ca28a30ff/: index_metadata.pickle
utils/: hf_auth.py  html_snippet.html  scrape_data.py  test.py
vectorstore/451606d2-2c0a-4154-ac45-3795d4728b99/: index_metadata.pickle
vectorstore/catalog/07a1bcd6-ff08-4818-ba9b-8021e7643fa6/: index_metadata.pickle
vectorstore/catalog/a42cabf6-cff1-4cd0-baf8-f4311ead54cc/: index_metadata.pickle
vectorstore/course_schedule/afda9503-c4cf-4f33-8f81-6af902066f09/: index_metadata.pickle
vectorstore/course_schedule/f0b7d3b2-4675-4ad3-be80-3014a56d10c5/: index_metadata.pickle
