[project]
name = "course-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.5.2",
    "argparse>=1.4.0",
    "bitsandbytes==0.46.1",
    "chromadb>=1.0.15",
    "datasets==3.6.0",
    "huggingface-hub==0.31.1",
    "ipykernel==6.29.5",
    "ipython>=7.16.3",
    "ipywidgets>=7.7.1",
    "jupyterlab>=3.0.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.3.0",
    "notebook>=6.4.12",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "peft==0.14.0",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "pyyaml==6.0.2",
    "safetensors==0.5.3",
    "scikit-learn==1.2.2",
    "sentence-transformers>=5.0.0",
    "torch",
    "torchvision",
    "tqdm>=4.64.0",
    "transformers==4.51.3",
    "wandb>=0.17.4",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.6.0%2Bcu124-cp311-cp311-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu124/torchvision-0.21.0%2Bcu124-cp311-cp311-linux_x86_64.whl" }
